feat: add cron scheduler inside a container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,17 @@ services:
       - ./api/web.config:/App/web.config
       - readup-api-keys:/Keys
 
+  cron:
+    build: ./cron
+    depends_on:
+      - config
+      - db
+      - api
+    volumes:
+      - ./cron/crontab:/crontab
+    env_file:
+      - ./cron/cron.env
+
   web:
     build: ./web
     container_name: readup-web-prod
