--- a/proxy/nginx.template.conf
+++ b/proxy/nginx.template.conf
@@ -46,6 +46,13 @@ http {
 	}
 	server {
 		listen 80;
+		server_name ink.${READUP_HOST};
+		location / {
+			proxy_pass http://readup-ink:8000;
+		}
+	}
+	server {
+		listen 80;
 		server_name static.${READUP_HOST}; 
 		location / {
 			# static src is downloaded in the Dockerfile
